--- a/Realisation/index.html
+++ b/Realisation/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Réalisation jeux éducatife </h1>
-   
-  
+    <h1> Réalisation jeux éducatif </h1>
+    
+
    <script src="javascript.js"></script>
 </body>
 </html>
