--- a/Asaas-Portfolio/index.html
+++ b/Asaas-Portfolio/index.html
@@ -85,26 +85,26 @@
         <section class="faverate" id="Intrested">
             <h1>Me Compétence</h1>
             <div class="card">
-                <img src="https://i.pinimg.com/736x/3d/bb/5b/3dbb5b6674a84aea99bd990df7d08ced.jpg" alt="skills">
+                <img src="img/Code Icon Design Vector, Code Icons, Icon, Illustration PNG and Vector with Transparent Background for Free Download.jpg" alt="skills">
                 <H5>Programmation Web
                 </H5>
                 <p>Créer des sites modernes et dynamiques en utilisant HTML, CSS et JavaScript</p>
             </div>
 
             <div class="card">
-                <img src="" alt="">
-                <H5>Accessibilité numérique</H5>
+                <img src="img/téléchargement (2).jpg" alt="">
+                <H5>photography</H5>
                 <p>Rendre le web plus accessible pour tout le monde, y compris les personnes en situation</p>
             </div>
 
             <div class="card">
-                <img src="" alt="">
+                <img src="img/Genially_copy - UI_UX _ Genially.jpg" alt="">
                 <H5>Design UX/UI</H5>
                 <p>Améliorer l’expérience utilisateur grâce à des interfaces simples et intuitives.</p>
             </div>
 
             <div class="card">
-                <img src="" alt="">
+                <img src="img/Иконка О НАС для инсты.jpg" alt="">
                 <H5>Travail en équipe</H5>
                 <p>Collaborer efficacement pour réussir des projets collectifs</p>
             </div>
