--- a/Asaas-Portfolio/index (1).html
+++ b/Asaas-Portfolio/index (1).html
@@ -158,8 +158,8 @@
       <div class="work-card">
         <img src="img/image.png" alt="Donuts House">
         <div class="work-info">
-          <h3>Elearning website</h3>
-          <p>Social media poster for Donuts house store with colorful design.</p>
+          <h3>E-commerce website </h3>
+          <p>Site web pour la marque Rhine Fashion, spécialisée dans les châles féminins.</p>
           <button>View project </button>
         </div>
       </div>
@@ -169,7 +169,7 @@
         <img src="https://www.shutterstock.com/image-vector/quiz-questions-game-template-multiple-260nw-2420026673.jpg" alt="Business dashboard">
         <div class="work-info">
           <h3>Jeu udicatife</h3>
-          <p>A dashboard for workers to measure productivity.</p>
+          <p>jeu éducatif en JavaScript** qui permet de mémoriser les 8 compétences principales de la formation Solicode.</p>
           <button>View project</button>
         </div>
       </div>
@@ -179,7 +179,7 @@
         <img src="img/image.png" alt="Helper website">
         <div class="work-info">
           <h3>Portfolio Website</h3>
-          <p>A landing page web design for an e-commerce app with an existing application.</p>
+          <p>Portfolio personnel représentant mes projets.</p>
           <button>View project</button>
         </div>
       </div>
