--- a/prototype/index.html
+++ b/prototype/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content=" Solicode .">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profil Soukaina asaas </title>
-  <link rel="stylesheet" href="my.css">
+  <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 </head>
