--- a/Asaas-Portfolio/cv.html
+++ b/Asaas-Portfolio/cv.html
@@ -102,7 +102,16 @@
 
     </main>
     <footer>
-       
+       <nav>
+       <ul>
+        
+      <li >
+      <a href="index (1).html">Accueil</a>
+    </li>
+
+    <li><a href="Contact.html">Contact</a></li>
+  </ul>
+</nav>
         <div class="social-icons">
     <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
     <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
