--- a/Asaas-Portfolio/Contact.html
+++ b/Asaas-Portfolio/Contact.html
@@ -18,7 +18,7 @@
 
     <!-- Lien principal avec sous-menu -->
     <li class="dropdown">
-      <a href="cv.html">CV</a>
+      <a href="cv.html">CV </a><i class="fa fa-caret-down"></i>
       <ul class="dropdown-menu">
         <li><a href="#competence">Compétences</a></li>
         <li><a href="#experience">Expériences</a></li>
