--- a/Asaas-Portfolio/index (1).html
+++ b/Asaas-Portfolio/index (1).html
@@ -18,7 +18,7 @@
 
    
     <li class="dropdown">
-      <a href="cv.html">CV</a>
+      <a href="cv.html">CV</a><i class="fa fa-caret-down"></i>
       <ul class="dropdown-menu">
         <li><a href="#competence">Compétences</a></li>
         <li><a href="#experience">Expériences</a></li>
