--- a/Asaas-Portfolio/cv.html
+++ b/Asaas-Portfolio/cv.html
@@ -54,7 +54,7 @@
     </div>
   </section>
 
-  <section class="whyme-section" id="formation">
+   <section class="whyme-section" id="formation">
     <h2>Pour quoi <span> Moi</span></h2>
     <div class="whyme-container">
       <div class="education">
@@ -62,16 +62,16 @@
         <div class="card">
           <div class="icon"><i class="fas fa-school"></i></div>
           <div class="content">
-            <h4>SCHOOL 1</h4>
-            <p>Web developer</p>
+            <h4>Solicode </h4>
+            <p>Formation Développeuse Web</p>
             <span>09/2025 - 06/2026</span>
           </div>
         </div>
         <div class="card">
           <div class="icon"><i class="fas fa-university"></i></div>
           <div class="content">
-            <h4>SCHOOL 2</h4>
-            <p>bachlor degree university</p>
+            <h4>Université Abdelmalek essadi</h4>
+            <p>Licence en physique et aplication</p>
             <span>2023 - 2026</span>
           </div>
         </div>
@@ -82,22 +82,23 @@
         <div class="card">
           <div class="icon"><i class="fas fa-briefcase"></i></div>
           <div class="content">
-            <h4>fREE LENCER</h4>
-            <p>FIVER</p>
-            <span>01/2008 - 01/2011</span>
+            <h4>Projets personnels</h4>
+            <p>Développement Web</p>
+            <span>2024 - 2025</span>
           </div>
         </div>
         <div class="card">
           <div class="icon"><i class="fas fa-briefcase"></i></div>
           <div class="content">
-            <h4>2 month of xeperiences</h4>
-            <p>car housse</p>
+            <h4>Stage de 2 mois</h4>
+            <p>Maison de voitures Peugeot</p>
             <span>06/2025 - 08/2025</span>
           </div>
         </div>
       </div>
     </div>
   </section>
+
 
 
     </main>
