--- a/Asaas-Portfolio/index (1).html
+++ b/Asaas-Portfolio/index (1).html
@@ -115,16 +115,16 @@
         <div class="card">
           <div class="icon"><i class="fas fa-school"></i></div>
           <div class="content">
-            <h4>SCHOOL 1</h4>
-            <p>Web developer</p>
+            <h4>Solicode </h4>
+            <p>Formation Développeuse Web</p>
             <span>09/2025 - 06/2026</span>
           </div>
         </div>
         <div class="card">
           <div class="icon"><i class="fas fa-university"></i></div>
           <div class="content">
-            <h4>SCHOOL 2</h4>
-            <p>bachlor degree university</p>
+            <h4>Université Abdelmalek essadi</h4>
+            <p>Licence en physique et aplication</p>
             <span>2023 - 2026</span>
           </div>
         </div>
@@ -135,16 +135,16 @@
         <div class="card">
           <div class="icon"><i class="fas fa-briefcase"></i></div>
           <div class="content">
-            <h4>fREE LENCER</h4>
-            <p>FIVER</p>
-            <span>01/2008 - 01/2011</span>
+            <h4>Projets personnels</h4>
+            <p>Développement Web</p>
+            <span>2024 - 2025</span>
           </div>
         </div>
         <div class="card">
           <div class="icon"><i class="fas fa-briefcase"></i></div>
           <div class="content">
-            <h4>2 month of xeperiences</h4>
-            <p>car housse</p>
+            <h4>Stage de 2 mois</h4>
+            <p>Maison de voitures Peugeot</p>
             <span>06/2025 - 08/2025</span>
           </div>
         </div>
@@ -161,7 +161,7 @@
     <div class="works-grid">
       <!-- Card 1 -->
       <div class="work-card">
-        <img src="img/image.png" alt="Donuts House">
+        <img src="img/Capture d'écran 2025-10-10 095302.png" alt="Donuts House">
         <div class="work-info">
           <h3>E-commerce website </h3>
           <p>Site web pour la marque Rhine Fashion, spécialisée dans les châles féminins.</p>
