--- a/Asaas-Portfolio/Contact.html
+++ b/Asaas-Portfolio/Contact.html
@@ -20,9 +20,12 @@
     <li class="dropdown">
       <a href="cv.html">CV </a><i class="fa fa-caret-down"></i>
       <ul class="dropdown-menu">
+        <li><a href="#about">À-propos</a></li>
         <li><a href="#competence">Compétences</a></li>
         <li><a href="#experience">Expériences</a></li>
         <li><a href="#formation">Formations</a></li>
+  
+         <li><a href="#works">Mes projets</a></li>
       </ul>
     </li>
 
