ajouter les modification

--- a/Asaas-Portfolio/Contact.html
+++ b/Asaas-Portfolio/Contact.html
@@ -13,25 +13,24 @@
   <div class="logo">MonPortfolio</div>
 
   <ul class="nav-links" id="nav-links">
-    <li><a href="index (1).html">Accueil</a></li>
-   
+    <li><a href="index.html">Accueil</a></li>
 
     <!-- Lien principal avec sous-menu -->
     <li class="dropdown">
       <a href="cv.html">CV </a><i class="fa fa-caret-down"></i>
       <ul class="dropdown-menu">
-        <li><a href="#about">À-propos</a></li>
-        <li><a href="#competence">Compétences</a></li>
-        <li><a href="#experience">Expériences</a></li>
-        <li><a href="#formation">Formations</a></li>
-  
-         <li><a href="#works">Mes projets</a></li>
+        <li><a href="cv.html#about">À-propos</a></li>
+        <li><a href="cv.html#competence">Compétences</a></li>
+        <li><a href="cv.html#experience">Expériences</a></li>
+        <li><a href="cv.html#formation">Formations</a></li>
+        <li><a href="cv.html#works">Mes projets</a></li>
       </ul>
     </li>
 
     <li><a href="Contact.html">Contact</a></li>
   </ul>
 </nav>
+
 
 
       
@@ -115,7 +114,7 @@
        <ul>
         
       <li >
-      <a href="index (1).html">Accueil</a>
+      <a href="index.html">Accueil</a>
     </li>
 
     <li><a href="cv.html">Cv</a></li>
