--- a/Asaas-Portfolio/index.html
+++ b/Asaas-Portfolio/index.html
@@ -13,19 +13,19 @@
   <div class="logo">MonPortfolio</div>
 
   <ul class="nav-links" id="nav-links">
-    <li><a href="index (1).html">Accueil</a></li>
+    <li><a href="index.html">Accueil</a></li>
    
 
    
     <li class="dropdown">
       <a href="cv.html">CV</a><i class="fa fa-caret-down"></i>
       <ul class="dropdown-menu">
-             <li><a href="#about">À-propos</a></li>
-        <li><a href="#competence">Compétences</a></li>
-        <li><a href="#experience">Expériences</a></li>
-        <li><a href="#formation">Formations</a></li>
+             <li><a href="cv.html#about">À-propos</a></li>
+        <li><a href="cv.html#competence">Mes Compétences</a></li>
+        <li><a href="cv.html#experience">Expériences</a></li>
+        <li><a href="cv.html#formation">Formations</a></li>
   
-         <li><a href="#works">Mes projets</a></li>
+         <li><a href="cv.html#works">Mes projets</a></li>
       </ul>
     </li>
 
@@ -44,7 +44,7 @@
             <p>Passionné par le développement web <br> et l'accessibilité numérique,  
             j'aime créer des projets qui ont <br> un impact positif sur la société.</p>
                 <div class="hero-buttons">
-            <a href="cv.html" class="btn black">Me competence</a>
+            <a href="cv.html#competence" class="btn black" >Me competence</a>
         <a href="#Contactme" class="btn orange">Contact Me</a>
        
       </div>
