--- a/bibliotheque/ajouter.html
+++ b/bibliotheque/ajouter.html
@@ -24,7 +24,7 @@
         <label for="Annee"> Annee </label> 
         <input type="text" id="Annee">
         <label for="Prix"> Prix </label> 
-        <input type="number" id="Prix">
+        <input type="text" id="Prix">
         <label for="disponible">disponible</label>
         <input type="checkbox" name="disponible" id="disponible">
         <label for="image">Image du livre :</label>
